--- a/src/components/animations.css
+++ b/src/components/animations.css
@@ -1,4 +1,4 @@
-@keyframes fadeIn {
+/* @keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
   }
@@ -39,4 +39,4 @@
     }
   }
   
-  
+   */
